samples/_failures_safe/1761205551_13b78b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_883e52f0.c: In function ‘parser_init’:
./samples/SAFE/__tmp_883e52f0.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
